clusters/nerc-ocp-infra/xdmod/svc-xdmod.yaml
apiVersion: v1
kind: Service
metadata:
  name: xdmod
spec:
  selector:
    app: xdmod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
