clusters/nerc-ocp-infra/xdmod/route-xdmod.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: xdmod
  namespace: xdmod
spec:
  to:
    kind: Service
    name: xdmod
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
